# Projects

./: README.md  __init__ .py  definitions.py  main.py  pyproject.toml  resources.py  ssl_patch.py  test.py
.tmp_dagster_home_44wmeh8u/history/: runs.db
.tmp_dagster_home_44wmeh8u/history/runs/: 3a9adaba-89f4-476e-833d-df23a2bbc0c3.db  8996ec11-4851-4078-b5cb-eae8da9e418d.db  b24ab249-f526-445a-b5c0-17e09c0e8586.db  index.db
.tmp_dagster_home_44wmeh8u/schedules/: schedules.db
.tmp_dagster_home_44wmeh8u/storage/3a9adaba-89f4-476e-833d-df23a2bbc0c3/compute_logs/: mqitxmqh.err
.tmp_dagster_home_44wmeh8u/storage/8996ec11-4851-4078-b5cb-eae8da9e418d/compute_logs/: ayrfvpdc.err
.tmp_dagster_home_44wmeh8u/storage/b24ab249-f526-445a-b5c0-17e09c0e8586/compute_logs/: yvcrppbv.err
.tmp_dagster_home_9ftcccp1/history/: runs.db
.tmp_dagster_home_9ftcccp1/history/runs/: index.db
.tmp_dagster_home_9ftcccp1/schedules/: schedules.db
.tmp_dagster_home_a0acsolm/history/: runs.db
.tmp_dagster_home_a0acsolm/history/runs/: index.db
.tmp_dagster_home_a0acsolm/schedules/: schedules.db
.tmp_dagster_home_fyez0s_r/history/: runs.db
.tmp_dagster_home_fyez0s_r/history/runs/: index.db
.tmp_dagster_home_fyez0s_r/schedules/: schedules.db
assets/: data_extraction.py  data_load.py  data_transform.py
