[project]
name = "retail-sales-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.11.5",
    "dagster-webserver>=1.11.5",
    "duckdb>=1.3.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
]
